--- a/untitled2.ipynb
+++ b/untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrZAthbSvd5hI/1fbqlP4a",
+      "authorship_tag": "ABX9TyOcxx9akSyuEe0yPgcMu444",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,7 @@
       },
       "outputs": [],
       "source": [
+        "%%writefile main.py\n",
         "import streamlit as st\n",
         "import whisper\n",
         "from TTS.api import TTS\n",
@@ -155,6 +156,17 @@
         "if __name__ == \"__main__\":\n",
         "    main()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "streamlit run main.py"
+      ],
+      "metadata": {
+        "id": "NDkqtpDv7G3p"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
